update gitignore. remove collaterial xcode subdirectoris from index

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-SculpCore.xcodeproj/project.xcworkspace/xcuserdata
+SculpCore.xcodeproj/project.xcworkspace/xcuserdata/
+SculpCore.xcodeproj/xcuserdata/Andrey.xcuserdatad/
+SculpCore.xcodeproj/xcshareddata/
